Update versions css; prevent overflow

--- a/src/css/components/_Peer.css
+++ b/src/css/components/_Peer.css
@@ -22,3 +22,8 @@
     margin-left: 5px;
   }
 }
+
+.peers {
+  display: flex;
+  flex-wrap: wrap;
+}
